istio-ingress/istio-pilot.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-pilot
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: ignore
      labels:
        istio: pilot
    spec:
      serviceAccountName: istio-pilot
      containers:
        - name: discovery
          image: docker.io/istio/pilot:0.1.6
          args:
            - "discovery"
            - "-v=2"
          ports:
            - name: http-discovery
              containerPort: 8080
        - name: apiserver
          image: docker.io/istio/pilot:0.1.6
          args:
            - "apiserver"
            - "-v=2"
          ports:
            - name: http-apiserver
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    istio: pilot
  name: istio-pilot
spec:
  ports:
    - name: http-apiserver
      port: 8081
    - name: http-discovery
      port: 8080
  selector:
    istio: pilot
