istio-ingress/ingress-helloworld.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-test
spec:
  rules:
    - http:
        paths:
          - path: /hello/.*
            backend:
              serviceName: helloworld-service
              servicePort: 8080
